@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2008-05-31"
+#define RUBY_RELEASE_DATE "2008-06-02"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20080531
-#define RUBY_PATCHLEVEL 0
+#define RUBY_RELEASE_CODE 20080602
+#define RUBY_PATCHLEVEL 1
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2008
-#define RUBY_RELEASE_MONTH 5
-#define RUBY_RELEASE_DAY 31
+#define RUBY_RELEASE_MONTH 6
+#define RUBY_RELEASE_DAY 2
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
